--- a/views/gamepage.handlebars
+++ b/views/gamepage.handlebars
@@ -1,84 +1,90 @@
-<h2>GAMEPAGE</h2>
-
-<div id = "passwordform" class = "">
-    <form>
-        PASSWORD<br>
-        <textarea id="passwordYo"rows="1" cols="20"></textarea>
+{{!-- <h2>GAMEPAGE</h2> --}}
+<div class="container game-screen">
+<section>
+<div id="passwordform">
+    <img class="char-select-head col-md-12" src="../public/assets/images/headers/enter-your-password.png"/>
+    <form class="text-center password-form">
+        <textarea id="passwordYo" rows="1" cols="60"></textarea>
         <button id="submitPassword" class="btn">Submit</button>
     </form> 
+    <br><br>
+    <div class="text-center">
+        <button class="backHome btn">Home</button>
+    </div>
 </div>
 
-<h6>{{brawler.userName}}</h6>
+<div id="gamePage" class="hidden">
+    <img class="char-select-head col-md-12" src="../public/assets/images/headers/Game-Page.png"/>
+    <h6>{{brawler.userName}}</h6>
 
-<button id="startbossone" class = "hidden">Thug</button>
-<button id="startbosstwo" class = "hidden">Gunslinger</button>
-<button id="startbossthree" class = "hidden">Giant Robot</button>
-
-
-<br>
-<div id = "bossonescreen" class = "hidden">
-    <h2 class = "charnamedisplay">Player</h2>
-    <h4 class = "usernamedisplay">Player</h4>
+    <button id="startbossone">Thug</button>
+    <button id="startbosstwo">Gunslinger</button>
+    <button id="startbossthree">Giant Robot</button>
     <br>
-    <button id= "playerButton">Break the Thug</button>
-    <br>
-    <h6 class = "playerattack">attack</h6>
-    <h6 class = "playerdefense">defense</h6>
-    <h6 class = "playerintellect">intellect</h6>
-    <h4 class = "playerattackstat">pending action</h4>
+    <div id = "bossonescreen" class = "hidden">
+        <h2 class = "charnamedisplay">Player</h2>
+        <h4 class = "usernamedisplay">Player</h4>
+        <br>
+        <button id= "playerButton">Break the Thug</button>
+        <br>
+        <h6 class = "playerattack">attack</h6>
+        <h6 class = "playerdefense">defense</h6>
+        <h6 class = "playerintellect">intellect</h6>
+        <h4 class = "playerattackstat">pending action</h4>
 
-    <h2 class = "bossnamedisplay">Boss</h2>
+        <h2 class = "bossnamedisplay">Boss</h2>
+        <br>
+        <h6 class = "bossattack">attack</h6>
+        <h6 class = "bossdefense">defense</h6>
+        <h6 class = "bossintellect">intellect</h6>
+        <h4 class = "bossattackstat">pending action</h4>
+    </div>
+
     <br>
-    <h6 class = "bossattack">attack</h6>
-    <h6 class = "bossdefense">defense</h6>
-    <h6 class = "bossintellect">intellect</h6>
-    <h4 class = "bossattackstat">pending action</h4>
+    <div id = "bosstwoscreen" class = "hidden">
+        <h2 class = "charnamedisplay">Player</h2>
+        <h4 class = "usernamedisplay">Player</h4>
+        <br>
+        <button id= "playerButton">Takedown the Gunslinger</button>
+        <br>
+        <h6 class = "playerattack">attack</h6>
+        <h6 class = "playerdefense">defense</h6>
+        <h6 class = "playerintellect">intellect</h6>
+        <h4 class = "playerattackstat">pending action</h4>
+
+        <h2 class = "bossnamedisplay">Boss</h2>
+        <br>
+        <h6 class = "bossattack">attack</h6>
+        <h6 class = "bossdefense">defense</h6>
+        <h6 class = "bossintellect">intellect</h6>
+        <h4 class = "bossattackstat">pending action</h4>
+    </div>
+
+    <br>
+    <div id = "bossthreescreen" class = "hidden">
+        <h2 class = "charnamedisplay">Player</h2>
+        <h4 class = "usernamedisplay">Player</h4>
+        <br>
+        <button id= "playerButton">Strike the Robot</button>
+        <br>
+        <h6 class = "playerattack">attack</h6>
+        <h6 class = "playerdefense">defense</h6>
+        <h6 class = "playerintellect">intellect</h6>
+        <h4 class = "playerattackstat">pending action</h4>
+
+        <h2 class = "bossnamedisplay">Boss</h2>
+        <br>
+        <h6 class = "bossattack">attack</h6>
+        <h6 class = "bossdefense">defense</h6>
+        <h6 class = "bossintellect">intellect</h6>
+        <h4 class = "bossattackstat">pending action</h4>
+    </div>
+
+    <div id = "winlosediv" class = "hidden">
+        <h1 id = "winlosetext"></h1>
+    </div>
+</div>    
+</section>
 </div>
-
-<br>
-<div id = "bosstwoscreen" class = "hidden">
-    <h2 class = "charnamedisplay">Player</h2>
-    <h4 class = "usernamedisplay">Player</h4>
-    <br>
-    <button id= "playerButton">Takedown the Gunslinger</button>
-    <br>
-    <h6 class = "playerattack">attack</h6>
-    <h6 class = "playerdefense">defense</h6>
-    <h6 class = "playerintellect">intellect</h6>
-    <h4 class = "playerattackstat">pending action</h4>
-
-    <h2 class = "bossnamedisplay">Boss</h2>
-    <br>
-    <h6 class = "bossattack">attack</h6>
-    <h6 class = "bossdefense">defense</h6>
-    <h6 class = "bossintellect">intellect</h6>
-    <h4 class = "bossattackstat">pending action</h4>
-</div>
-
-<br>
-<div id = "bossthreescreen" class = "hidden">
-    <h2 class = "charnamedisplay">Player</h2>
-    <h4 class = "usernamedisplay">Player</h4>
-    <br>
-    <button id= "playerButton">Strike the Robot</button>
-    <br>
-    <h6 class = "playerattack">attack</h6>
-    <h6 class = "playerdefense">defense</h6>
-    <h6 class = "playerintellect">intellect</h6>
-    <h4 class = "playerattackstat">pending action</h4>
-
-    <h2 class = "bossnamedisplay">Boss</h2>
-    <br>
-    <h6 class = "bossattack">attack</h6>
-    <h6 class = "bossdefense">defense</h6>
-    <h6 class = "bossintellect">intellect</h6>
-    <h4 class = "bossattackstat">pending action</h4>
-</div>
-
-<div id = "winlosediv" class = "hidden">
-    <h1 id = "winlosetext"></h1>
-</div>
-
-
 
 
